--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,14 @@ body {
   font-size: 16px;
 }
 
+.input-group select {
+  width: 91%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
 /* Submit Button */
 button {
   width: 100%;
